<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_theme"
    android:orientation="vertical"
    tools:context=".mvp.order.OrderDetailActivity">

    <include layout="@layout/left_back_titlebar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/item_transaction_income"
            android:textColor="@color/input_grey"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/orderdetail_coin_amount"
            android:text="@string/item_transaction_plus"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/orderdetail_coin_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/orderdetail_coin_type"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/orderdetail_coin_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_theme"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_orderid"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_orderid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_currency_amount"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_currency_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_orderreceive"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_orderreceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/order_detail_exception_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_exception"
            android:textColor="@color/input_confirm"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_exception"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_confirm"
            android:textSize="12dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_orderstatus"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_orderstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/order_detail_confirmrations"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_blocknums"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_blocknums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/order_detail_ordertime"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/order_detail_ordertime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/input_grey"
            android:textSize="12dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/orderdetail_check_blockchain"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/order_detail_check"
        android:textColor="@color/receipt_address"
        android:visibility="gone"/>


</LinearLayout>