<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".mvp.setting.SettingExtraActivity">

    <include layout="@layout/left_back_titlebar"/>

    <EditText
        android:id="@+id/grant_points_member_id"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_quit_background"
        android:hint="@string/points_grant_member_id"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:text="10010"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/grant_points_value"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_quit_background"
        android:hint="@string/points_grant_value"
        android:inputType="number"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:text="100"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/grant_points_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_confirm_background"
        android:gravity="center"
        android:text="@string/dialog_update_confirm"
        android:textColor="@color/white"
        android:textSize="18dp"/>

</LinearLayout>