<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/dialog_global_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dialog_global_title"
                android:textColor="@color/black"
                android:textSize="18dp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_theme"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/dialog_global_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/dialog_global_message"
                android:textColor="@color/black"
                android:textSize="16dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_theme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_global_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_global_known"
                android:textColor="@color/input_grey"
                android:textSize="18dp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_theme"/>

            <TextView
                android:id="@+id/dialog_global_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_global_vieworder"
                android:textColor="@color/input_confirm"
                android:textSize="18dp"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
